# frugal

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  template.env
apps/evaluations/: WIKI_LSTM_LSTM.json  jules_test_0.json  jules_test_1.json
apps/models/BERT/: main.py
apps/models/ML_TFIDF_NB/: main.py
apps/models/ML_TFID_NB_WITHOUT_0/: main.py
apps/models/ML_TFID_NB_WITHOUT_0/apps/evaluations/: ML_TFID_NB_WITHOUT_0.json
apps/models/WIKI_LSTM_LSTM/: main.py
apps/models/firstneuralnetwork/: main.py
apps/models/jules_test_0/: main.py
frugal/: __init__.py  evaluation.py
frugal/config/: environment.py
frugal/data/: data.py  preprocessor.py
frugal/data_preproc/: data.py  preprocessor.py
frugal/models/ML_CountVect_NB/: main.py
frugal/models/ML_TFIDF_NB/: main.py
frugal/models/RNN_LSTM/: main.py
frugal/models/RNN_basic/: main.py
notebooks/: ML_TFIDF_Withou_0.ipynb  baseline.ipynb  model.ipynb  perf_metrics.ipynb
notebooks/apps/evaluations/: TFIDF_without_class_0.json
templates/: model_template.py
